[WIP] Reworking literals on grammar.